# AcTermux

./: README.md  gradle.properties  settings.gradle.kts
.acside/editor/: openedFiles.json.bak
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/social/actermux/: MainActivity.kt
app/src/main/kotlin/com/social/actermux/ui/: BottomTerminal.kt
app/src/main/res/values/: strings.xml  themes.xml
terminal-emulator/: build.gradle
terminal-merminal/: build.gradle.kts
terminal-merminal/src/main/java/cn/mucute/merminal/composable/: SessionController.kt  Terminal.kt
terminal-merminal/src/main/java/cn/mucute/merminal/core/: TerminalSession.java
terminal-merminal/src/main/java/cn/mucute/merminal/view/: ShellTermSession.kt  TerminalView.java
terminal-merminal/src/main/jni/: Android.mk  CMakeLists.txt
terminal-view/: build.gradle
termux-app/: build.gradle
termux-app/src/main/: AndroidManifest.xml
termux-app/src/main/java/com/termux/app/: TermuxActivity.java  TermuxService.java
termux-app/src/main/java/com/termux/app/terminal/: TermuxTerminalSessionClient.java  TermuxTerminalViewClient.java
termux-app/src/main/java/com/termux/app/utils/: CrashUtils.java  PluginUtils.java
termux-app/src/main/res/values/: strings.xml
termux-shared/: build.gradle
termux-shared/src/main/: AndroidManifest.xml
termux-shared/src/main/java/com/termux/shared/data/: DataUtils.java
termux-shared/src/main/java/com/termux/shared/interact/: MessageDialogUtils.java
termux-shared/src/main/res/raw/: apt_info_script.sh
(+3 files in other folders)
